# mypackage

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  incl.py  pyproject.toml  sample.py
mypackage/: pyproject.toml
mypackage/excluded/: excluded.py
mypackage/package2/bar/: bar.py
mypackage/tests/: test_bar.py
notpackage/: main.py  requirements.txt  run.sh
src/foo/: __init__.py  num.py
tests/: test_bar.py  test_foo.py
