[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
description = "My package description"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "==3.10.*"
dependencies = [
    "numpy~=1.21"
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "foo.version.version"}

[tool.setuptools_scm]
write_to = "src/foo/version.py"
