[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
description = "My package description"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = "==3.10.*"
dependencies = [
    "numpy~=1.21"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black",
    "isort"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "foo.version.version"}

[tool.setuptools_scm]
write_to = "src/foo/version.py"

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100
